// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform react to jsx React.fragment to set keys and source 1`] = `
var _jsxFileName = "";
var x = React.jsxDEV(React.Fragment, {}, "foo", false, {
  fileName: _jsxFileName,
  lineNumber: 1
}, this);
`;

exports[`transform react to jsx adds appropriate new lines when using spread attribute 1`] = `
React.jsx(Component, Object.assign({}, props, {
  sound: "moo"
}));
`;

exports[`transform react to jsx arrow functions 1`] = `
var foo = function () {
  var _this = this;

  return function () {
    return React.jsx(_this, {});
  };
};

var bar = function () {
  var _this2 = this;

  return function () {
    return React.jsx(_this2.foo, {});
  };
};
`;

exports[`transform react to jsx assignment 1`] = `
var div = React.jsx(Component, Object.assign({}, props, {
  foo: "bar"
}));
`;

exports[`transform react to jsx auto import can specify source 1`] = `
import * as _foobar from "foobar";

var x = _foobar.jsx("div", {
  children: _foobar.jsx("span", {})
});
`;

exports[`transform react to jsx auto import default 1`] = `
import _default from "react";

var x = _default.jsx(_default.Fragment, {
  children: _default.jsxs("div", {
    children: [_default.jsx("div", {}, "1"), _default.jsx("div", {
      meow: "wolf"
    }, "2"), _default.jsx("div", {}, "3"), _default.createElement("div", Object.assign({}, props, {
      key: "4"
    }))]
  })
});
`;

exports[`transform react to jsx auto import in dev 1`] = `
import { createElement as _createElement } from "react";
import { jsxDEV as _jsxDEV } from "react";
import { Fragment as _Fragment } from "react";
var _jsxFileName = "";

var x = _jsxDEV(_Fragment, {
  children: _jsxDEV("div", {
    children: [_jsxDEV("div", {}, "1", false, {
      fileName: _jsxFileName,
      lineNumber: 4
    }, this), _jsxDEV("div", {
      meow: "wolf"
    }, "2", false, {
      fileName: _jsxFileName,
      lineNumber: 5
    }, this), _jsxDEV("div", {}, "3", false, {
      fileName: _jsxFileName,
      lineNumber: 6
    }, this), _createElement("div", Object.assign({}, props, {
      key: "4",
      __source: {
        fileName: _jsxFileName,
        lineNumber: 7
      },
      __self: this
    }))]
  }, undefined, true, {
    fileName: _jsxFileName,
    lineNumber: 3
  }, this)
}, undefined, false);
`;

exports[`transform react to jsx auto import named exports 1`] = `
import { createElement as _createElement } from "react";
import { jsx as _jsx } from "react";
import { jsxs as _jsxs } from "react";
import { Fragment as _Fragment } from "react";

var x = _jsx(_Fragment, {
  children: _jsxs("div", {
    children: [_jsx("div", {}, "1"), _jsx("div", {
      meow: "wolf"
    }, "2"), _jsx("div", {}, "3"), _createElement("div", Object.assign({}, props, {
      key: "4"
    }))]
  })
});
`;

exports[`transform react to jsx auto import namespace 1`] = `
import * as _react from "react";

var x = _react.jsx(_react.Fragment, {
  children: _react.jsxs("div", {
    children: [_react.jsx("div", {}, "1"), _react.jsx("div", {
      meow: "wolf"
    }, "2"), _react.jsx("div", {}, "3"), _react.createElement("div", Object.assign({}, props, {
      key: "4"
    }))]
  })
});
`;

exports[`transform react to jsx auto import none 1`] = `
var x = React.jsx(React.Fragment, {
  children: React.jsxs("div", {
    children: [React.jsx("div", {}, "1"), React.jsx("div", {
      meow: "wolf"
    }, "2"), React.jsx("div", {}, "3"), React.createElement("div", Object.assign({}, props, {
      key: "4"
    }))]
  })
});
`;

exports[`transform react to jsx auto import pragma overrides regular pragma 1`] = `
import _default from "foobar";

/** @jsxAutoImport defaultExport */
var x = _default.jsx("div", {
  children: _default.jsx("span", {})
});
`;

exports[`transform react to jsx auto import require 1`] = `
var _react = require("react");

var x = _react.jsx(_react.Fragment, {
  children: _react.jsxs("div", {
    children: [_react.jsx("div", {}, "1"), _react.jsx("div", {
      meow: "wolf"
    }, "2"), _react.jsx("div", {}, "3"), _react.createElement("div", Object.assign({}, props, {
      key: "4"
    }))]
  })
});
`;

exports[`transform react to jsx auto import undefined 1`] = `
var x = React.jsx(React.Fragment, {
  children: React.jsxs("div", {
    children: [React.jsx("div", {}, "1"), React.jsx("div", {
      meow: "wolf"
    }, "2"), React.jsx("div", {}, "3"), React.createElement("div", Object.assign({}, props, {
      key: "4"
    }))]
  })
});
`;

exports[`transform react to jsx auto import with namespaces already defined 1`] = `
import * as _react3 from "react";
import * as _react from "foo";

const react = _react(1);

const _react1 = react;
const _react2 = react;

var x = _react3.jsxs("div", {
  children: [_react3.jsx("div", {}, "1"), _react3.jsx("div", {
    meow: "wolf"
  }, "2"), _react3.jsx("div", {}, "3"), _react3.createElement("div", Object.assign({}, props, {
    key: "4"
  }))]
});
`;

exports[`transform react to jsx auto import with no JSX 1`] = `var foo = "<div></div>";`;

exports[`transform react to jsx auto import with react already defined 1`] = `
import * as _react from "react";
import * as react from "react";
var y = react.createElement("div", {
  foo: 1
});

var x = _react.jsxs("div", {
  children: [_react.jsx("div", {}, "1"), _react.jsx("div", {
    meow: "wolf"
  }, "2"), _react.jsx("div", {}, "3"), _react.createElement("div", Object.assign({}, props, {
    key: "4"
  }))]
});
`;

exports[`transform react to jsx complicated scope named exports 1`] = `
import { jsx as _jsx2 } from "react";

const Bar = function () {
  const Foo = function () {
    const Component = function ({
      thing,
      ..._react
    }) {
      if (!thing) {
        var _react2 = "something useless";

        var b = _react3();

        var jsx = 1;
        var _jsx = 2;
        return _jsx2("div", {});
      }

      ;
      return _jsx2("span", {});
    };
  };
};
`;

exports[`transform react to jsx complicated scope require 1`] = `
var _react4 = require("react");

const Bar = function () {
  const Foo = function () {
    const Component = function ({
      thing,
      ..._react
    }) {
      if (!thing) {
        var _react2 = "something useless";

        var b = _react3();

        var c = _react5();

        var jsx = 1;
        var _jsx = 2;
        return _react4.jsx("div", {});
      }

      ;
      return _react4.jsx("span", {});
    };
  };
};
`;

exports[`transform react to jsx concatenates adjacent string literals 1`] = `
var x = React.jsxs("div", {
  children: ["foo", "bar", "baz", React.jsx("div", {
    children: "buz bang"
  }), "qux", null, "quack"]
});
`;

exports[`transform react to jsx duplicate children prop should transform into sequence expression with actual children 1`] = `
React.jsx(Component, {
  children: (1, "2")
});
`;

exports[`transform react to jsx duplicate children prop should transform into sequence expression with next prop 1`] = `
React.jsx(Component, {
  foo: (1, 3),
  children: "2"
});
`;

exports[`transform react to jsx duplicate children prop should transform into sequence expression with spread 1`] = `
React.jsx(Component, Object.assign({}, (1, x), {
  children: "2"
}));
`;

exports[`transform react to jsx duplicate children props should transform into sequence expression with next prop 1`] = `
React.jsx(Component, {
  foo: (1, 4, 3),
  children: "2"
});
`;

exports[`transform react to jsx fragment with no children 1`] = `var x = React.jsx(React.Fragment, {});`;

exports[`transform react to jsx fragments 1`] = `
var x = React.jsx(React.Fragment, {
  children: React.jsx("div", {})
});
`;

exports[`transform react to jsx fragments in dev mode (no key and source) 1`] = `
var _jsxFileName = "";
var x = React.jsxDEV(React.Fragment, {
  children: React.jsxDEV("div", {}, undefined, false, {
    fileName: _jsxFileName,
    lineNumber: 1
  }, this)
}, undefined, false);
`;

exports[`transform react to jsx fragments to set keys 1`] = `var x = React.jsx(React.Fragment, {}, "foo");`;

exports[`transform react to jsx import source pragma overrides regular pragma 1`] = `
import * as _baz from "baz";

/** @jsxImportSource baz */
var x = _baz.jsx("div", {
  children: _baz.jsx("span", {})
});
`;

exports[`transform react to jsx multiple pragmas work 1`] = `
import _default from "baz";

/** Some comment here
           * @jsxImportSource baz
           * @jsxAutoImport defaultExport
          */
var x = _default.jsx("div", {
  children: _default.jsx("span", {})
});
`;

exports[`transform react to jsx nonStatic children 1`] = `
var _jsxFileName = "";
var x = React.jsxDEV("div", {
  children: [React.jsxDEV("span", {}, '0', false, {
    fileName: _jsxFileName,
    lineNumber: 3
  }, this), React.jsxDEV("span", {}, '1', false, {
    fileName: _jsxFileName,
    lineNumber: 3
  }, this)]
}, undefined, false, {
  fileName: _jsxFileName,
  lineNumber: 2
}, this);
`;

exports[`transform react to jsx properly handles keys 1`] = `
var x = React.jsxs("div", {
  children: [React.jsx("div", {}, "1"), React.jsx("div", {
    meow: "wolf"
  }, "2"), React.jsx("div", {}, "3")]
});
`;

exports[`transform react to jsx properly passes in source and self 1`] = `
var _jsxFileName = "";
var x = React.jsxDEV("div", {}, undefined, false, {
  fileName: _jsxFileName,
  lineNumber: 1
}, this);
`;

exports[`transform react to jsx should allow constructor as prop 1`] = `
React.jsx(Component, {
  constructor: "foo"
});
`;

exports[`transform react to jsx should allow deeper js namespacing 1`] = `React.jsx(Namespace.DeepNamespace.Component, {});`;

exports[`transform react to jsx should allow elements as attributes 1`] = `
React.jsx("div", {
  attr: React.jsx("div", {})
});
`;

exports[`transform react to jsx should allow js namespacing 1`] = `React.jsx(Namespace.Component, {});`;

exports[`transform react to jsx should allow nested fragments 1`] = `
React.jsx("div", {
  children: React.jsxs(React.Fragment, {
    children: [React.jsxs(React.Fragment, {
      children: [React.jsx("span", {
        children: "Hello"
      }), React.jsx("span", {
        children: "world"
      })]
    }), React.jsxs(React.Fragment, {
      children: [React.jsx("span", {
        children: "Goodbye"
      }), React.jsx("span", {
        children: "world"
      })]
    })]
  })
});
`;

exports[`transform react to jsx should avoid wrapping in extra parens if not needed 1`] = `
var x = React.jsx("div", {
  children: React.jsx(Component, {})
});
var x = React.jsx("div", {
  children: props.children
});
var x = React.jsx(Composite, {
  children: props.children
});
var x = React.jsx(Composite, {
  children: React.jsx(Composite2, {})
});
`;

exports[`transform react to jsx should convert simple tags 1`] = `var x = React.jsx("div", {});`;

exports[`transform react to jsx should convert simple text 1`] = `
var x = React.jsx("div", {
  children: "text"
});
`;

exports[`transform react to jsx should escape xhtml jsxattribute 1`] = `
React.jsx("div", {
  id: "w\\xF4w"
});
React.jsx("div", {
  id: "w"
});
React.jsx("div", {
  id: "w < w"
});
`;

exports[`transform react to jsx should escape xhtml jsxtext 1`] = `
React.jsx("div", {
  children: "wow"
});
React.jsx("div", {
  children: "w\\xF4w"
});
React.jsx("div", {
  children: "w & w"
});
React.jsx("div", {
  children: "w & w"
});
React.jsx("div", {
  children: "w \\xA0 w"
});
React.jsx("div", {
  children: "this should not parse as unicode: \\xA0"
});
React.jsx("div", {
  children: "this should parse as nbsp: \\xA0 "
});
React.jsxs("div", {
  children: ["this should parse as unicode: ", '  ']
});
React.jsx("div", {
  children: "w < w"
});
`;

exports[`transform react to jsx should handle attributed elements 1`] = `
var HelloMessage = React.createClass({
  render: function () {
    return React.jsxs("div", {
      children: ["Hello ", this.props.name]
    });
  }
});
React.render(React.jsx(HelloMessage, {
  name: React.jsx("span", {
    children: "Sebastian"
  })
}), mountNode);
`;

exports[`transform react to jsx should handle has own property correctly 1`] = `
React.jsx("hasOwnProperty", {
  children: "testing"
});
`;

exports[`transform react to jsx should have correct comma in nested children 1`] = `
var x = React.jsxs("div", {
  children: [React.jsx("div", {
    children: React.jsx("br", {})
  }), React.jsxs(Component, {
    children: [foo, React.jsx("br", {}), bar]
  }), React.jsx("br", {})]
});
`;

exports[`transform react to jsx should insert commas after expressions before whitespace 1`] = `
var x = React.jsx("div", {
  attr1: "foo" + "bar",
  attr2: "foo" + "bar" + "baz" + "bug",
  attr3: "foo" + "bar" + "baz" + "bug",
  attr4: "baz"
});
`;

exports[`transform react to jsx should not add quotes to identifier names 1`] = `
var e = React.jsx(F, {
  aaa: true,
  new: true,
  const: true,
  var: true,
  default: true,
  "foo-bar": true
});
`;

exports[`transform react to jsx should not strip nbsp even couple with other whitespace 1`] = `
React.jsx("div", {
  children: "\\xA0 "
});
`;

exports[`transform react to jsx should not strip tags with a single child of nbsp 1`] = `
React.jsx("div", {
  children: "\\xA0"
});
`;

exports[`transform react to jsx should properly handle comments adjacent to children 1`] = `
var x = React.jsxs("div", {
  children: [React.jsx("span", {}), React.jsx("br", {})]
});
`;

exports[`transform react to jsx should properly handle comments between props 1`] = `
var x = React.jsx("div", {
  /* a multi-line
    comment */
  attr1: "foo",
  children: React.jsx("span", {
    // a double-slash comment
    attr2: "bar"
  })
});
`;

exports[`transform react to jsx should properly handle potentially null variables 1`] = `
var foo = null;
var x = React.jsx("div", Object.assign({}, foo));
`;

exports[`transform react to jsx should quote jsx attributes 1`] = `
React.jsx("button", {
  "data-value": "a value",
  children: "Button"
});
`;

exports[`transform react to jsx should support xml namespaces if flag 1`] = `
React.jsx("f:image", {
  "n:attr": true
});
`;

exports[`transform react to jsx should transform known hyphenated tags 1`] = `React.jsx("font-face", {});`;

exports[`transform react to jsx static children 1`] = `
var _jsxFileName = "";
var x = React.jsxDEV("div", {
  children: [React.jsxDEV("span", {}, undefined, false, {
    fileName: _jsxFileName,
    lineNumber: 3
  }, this), [React.jsxDEV("span", {}, '0', false, {
    fileName: _jsxFileName,
    lineNumber: 4
  }, this), React.jsxDEV("span", {}, '1', false, {
    fileName: _jsxFileName,
    lineNumber: 4
  }, this)]]
}, undefined, true, {
  fileName: _jsxFileName,
  lineNumber: 2
}, this);
`;

exports[`transform react to jsx useBuiltIns false uses extend instead of Object.assign 1`] = `
function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

React.jsx(Component, _extends({
  y: 2
}, x));
`;

exports[`transform react to jsx uses createElement when the key comes after a spread 1`] = `
var x = React.createElement("div", Object.assign({}, props, {
  key: "1",
  foo: "bar"
}));
`;

exports[`transform react to jsx uses jsx when the key comes before a spread 1`] = `
var x = React.jsx("div", Object.assign({}, props, {
  foo: "bar"
}), "1");
`;

exports[`transform react to jsx uses jsxDEV instead of jsx in dev mode 1`] = `
var _jsxFileName = "";
var x = React.jsxDEV("span", {
  propOne: "one",
  children: "Hi"
}, undefined, false, {
  fileName: _jsxFileName,
  lineNumber: 1
}, this);
`;

exports[`transform react to jsx wraps props in react spread for first spread attributes 1`] = `
React.jsx(Component, Object.assign({}, x, {
  y: 2,
  z: true
}));
`;

exports[`transform react to jsx wraps props in react spread for last spread attributes 1`] = `
React.jsx(Component, Object.assign({
  y: 2,
  z: true
}, x));
`;

exports[`transform react to jsx wraps props in react spread for middle spread attributes 1`] = `
React.jsx(Component, Object.assign({
  y: 2
}, x, {
  z: true
}));
`;
